refactor: update everything

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       Tailwind Starter Kit by Creative Tim | Free and Open Source UI Kit
     </title>
   </head>
-  <body class="text-gray-800 antialiased">
+  <body class="text-coolGray-700 antialiased">
     <noscript>
       <strong
         >We're sorry but vue-notus doesn't work properly without JavaScript
