refactor: change coolGray with blueGray

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
     />
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
     <title>
-      Tailwind Starter Kit by Creative Tim | Free and Open Source UI Kit
+      Vue Notus by Creative Tim | Free and Open Source UI Kit
     </title>
   </head>
-  <body class="text-coolGray-700 antialiased">
+  <body class="text-blueGray-700 antialiased">
     <noscript>
       <strong
         >We're sorry but vue-notus doesn't work properly without JavaScript
