--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       sizes="76x76"
       href="<%= BASE_URL %>apple-icon.png"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvVL6SovqBi_iz8aew6I4zheqcr82uyv4"></script>
     <title>
       High Can Fly | Club de parapente
     </title>
