upgrade to Tailwindcss 3.0.25 with JIT

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       High Can Fly | Club de parapente
     </title>
   </head>
-  <body class="text-blueGray-700 antialiased">
+  <body class="text-slate-700 antialiased">
     <noscript>
       <strong
         >We're sorry but vue-notus doesn't work properly without JavaScript
