Update META tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="description" content="Highcanfly site de parapente dans le Nord. Nous encourageons la pratique du parapete sans utiliser de remontées mécaniques. La meilleure montée se fait à pied. Vive le marche et vol. Nous sommes affiliés à la FFVL sous le numéro 29070."/>
+    <meta name="keywords" content="parapente, nord, marche, vol"/>
+    <meta name="author" content="Ronan Le Meillat" />
+    <meta name="copyright" content="Association Highcanfly" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>
@@ -18,8 +22,7 @@
   <body class="text-slate-700 antialiased">
     <noscript>
       <strong
-        >We're sorry but vue-notus doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >Désolé ! Notre site utilise la 	technologie SPA (single page application), sans Javascript vous ne pourrez pas le voir.</strong
       >
     </noscript>
     <div id="app"></div>
