--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
+    <link rel ="canonical" href="https://www.highcanfly.club/" />
     <meta name="description" content="Highcanfly site de parapente dans le Nord. Nous encourageons la pratique du parapete sans utiliser de remontées mécaniques. La meilleure montée se fait à pied. Vive le marche et vol. Nous sommes affiliés à la FFVL sous le numéro 29070."/>
     <meta name="keywords" content="parapente, nord, marche, vol"/>
     <meta name="author" content="Ronan Le Meillat" />
