--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
     <link rel ="canonical" href="https://www.highcanfly.club/" />
-    <meta name="description" content="Highcanfly site de parapente dans le Nord. Nous encourageons la pratique du parapete sans utiliser de remontées mécaniques. La meilleure montée se fait à pied. Vive le marche et vol. Nous sommes affiliés à la FFVL sous le numéro 29070."/>
+    <meta name="description" content="Site de parapente dans le Nord. Nous encourageons la pratique du parapete sans utiliser de moteur. Vive le marche et vol. Affiliés à la FFVL n°29070."/>
     <meta name="keywords" content="parapente, nord, marche, vol"/>
     <meta name="author" content="Ronan Le Meillat" />
     <meta name="copyright" content="Association Highcanfly" />
@@ -23,7 +23,7 @@
   <body class="text-slate-700 antialiased">
     <noscript>
       <strong
-        >Désolé ! Notre site utilise la 	technologie SPA (single page application), sans Javascript vous ne pourrez pas le voir.</strong
+        >Désolé ! Notre site utilise la technologie SPA (single page application), sans Javascript vous ne pourrez pas le voir.</strong
       >
     </noscript>
     <div id="app"></div>
