--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
     <link rel ="canonical" href="https://www.highcanfly.club/" />
-    <meta name="description" content="Site de parapente dans le Nord. Nous encourageons la pratique du parapete sans utiliser de moteur. Vive le marche et vol. Affiliés à la FFVL n°29070."/>
+    <meta name="description" content="Club de parapente dans le Nord. Nous encourageons la pratique du parapete sans utiliser de moteur. Vive le marche et vol. Affiliés à la FFVL n°29070."/>
     <meta name="keywords" content="parapente, nord, marche, vol"/>
     <meta name="author" content="Ronan Le Meillat" />
     <meta name="copyright" content="Association Highcanfly" />
