Add 'du Nord' to all pages titles for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>
-      High Can Fly | Club de parapente
+      High Can Fly | Club de parapente du Nord
     </title>
   </head>
   <body class="text-slate-700 antialiased">
