--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <meta name="copyright" content="Association Highcanfly" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/@nano-sql/core@2.3.7/dist/nano-sql.min.js'></script>
+    <script src='https://cfdmv.highcanfly.club/js/igc-parser.js'></script>
+    <script src='https://cfdmv.highcanfly.club/js/fit-parser.js'></script>
+    <script src='https://cfdmv.highcanfly.club/js/gpx-parser.js'></script>
     <title>
       High Can Fly | Club de parapente du Nord
     </title>
