--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <meta name="copyright" content="Association Highcanfly" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="rating" content="safe for kids" />
+    <meta name="robots" content="index,follow" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/@nano-sql/core@2.3.7/dist/nano-sql.min.js'></script>
     <script src='https://cfdmv.highcanfly.club/js/igc-parser.js'></script>
