Structured information in index.html and Address

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,43 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="rating" content="safe for kids" />
     <meta name="robots" content="index,follow" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SportsTeam",
+        "sport": "Paragliding",
+        "logo": "https://highcanfly.club/img/logo_high_can_fly.38e653e1.svg",
+        "nonprofitStatus": "Nonprofit501c7",
+        "url": "https://www.highcanfly.club",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "119 rue Marceau Martin",
+          "postalCode": "59128",
+          "addressLocality": "Flers-en-Escrebieux"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "50.399619",
+          "longitude": "3.096906"
+        },
+        "description": "Club de Parapente du Nord",
+        "name": "High Can Fly Parapente",
+        "memberOf": [
+        {
+          "@type": "SportsOrganization",
+          "name": "Comité Départemental de Vol Libre du Nord",
+          "url": "https://cdvl59.cf"
+        },{
+          "@type": "SportsOrganization",
+          "name": "Ligue de Vol Libre des Hauts-de-France"
+        },{
+          "@type": "SportsOrganization",
+          "name": "Fédération Français de Vol Libre",
+          "url": "https://www.ffvl.fr"
+        }
+       ]
+      }
+      </script>
     <title>
       High Can Fly | Club de parapente du Nord
     </title>
