update structured information

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,11 @@
       {
         "@context": "https://schema.org",
         "@type": "SportsTeam",
-        "sport": "Paragliding",
-        "logo": "https://highcanfly.club/img/logo_high_can_fly.38e653e1.svg",
+        "sport": "Parapente",
+        "description": "Club de Parapente du Nord",
+        "name": "High Can Fly Parapente",
+        "alternateName": "Highcanfly",
+        "logo": "https://highcanfly.club/img/assets/img/logo_high_can_fly.svg",
         "nonprofitStatus": "Nonprofit501c7",
         "url": "https://www.highcanfly.club",
         "address": {
@@ -37,19 +40,23 @@
           "latitude": "50.399619",
           "longitude": "3.096906"
         },
-        "description": "Club de Parapente du Nord",
-        "name": "High Can Fly Parapente",
         "memberOf": [
         {
           "@type": "SportsOrganization",
           "name": "Comité Départemental de Vol Libre du Nord",
-          "url": "https://cdvl59.cf"
+          "url": "https://cdvl59.cf",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "2 digue Nicolas II",
+            "postalCode": "59240",
+            "addressLocality": "Dunkerque"
+          }
         },{
           "@type": "SportsOrganization",
           "name": "Ligue de Vol Libre des Hauts-de-France"
         },{
           "@type": "SportsOrganization",
-          "name": "Fédération Français de Vol Libre",
+          "name": "Fédération Française de Vol Libre",
           "url": "https://www.ffvl.fr"
         }
        ]
