update structured information

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "SportsTeam",
+        "@type": "SportsClub",
         "sport": "Parapente",
         "description": "Club de Parapente du Nord",
         "name": "High Can Fly Parapente",
