--- a/public/index.html
+++ b/public/index.html
@@ -26,20 +26,28 @@
         "description": "Club de Parapente du Nord",
         "name": "High Can Fly Parapente",
         "alternateName": "Highcanfly",
-        "logo": "https://highcanfly.club/img/assets/img/logo_high_can_fly.svg",
+        "image": "https://www.highcanfly.club/img/assets/img/logo_high_can_fly.svg",
+        "logo": "https://www.highcanfly.club/img/assets/img/logo_high_can_fly.svg",
         "nonprofitStatus": "Nonprofit501c7",
         "url": "https://www.highcanfly.club",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "119 rue Marceau Martin",
           "postalCode": "59128",
-          "addressLocality": "Flers-en-Escrebieux"
+          "addressLocality": "Flers-en-Escrebieux",
+          "addressCountry": "FR"
         },
         "geo": {
           "@type": "GeoCoordinates",
           "latitude": "50.399619",
           "longitude": "3.096906"
         },
+        "sameAs" : [
+                      "https://twitter.com/HighCanFlyClub",
+                      "https://www.instagram.com/highcanfly_parapente/",
+                      "https://github.com/eltorio/vue-highcanfly/tree/main"
+                    ],
+        "priceRange" : "$",
         "memberOf": [
         {
           "@type": "SportsOrganization",
