update structured information adds naics

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
         "description": "Club de Parapente du Nord",
         "name": "High Can Fly Parapente",
         "alternateName": "Highcanfly",
+        "naics": "711211",
         "image": "https://www.highcanfly.club/img/assets/img/logo_high_can_fly.svg",
         "logo": "https://www.highcanfly.club/img/assets/img/logo_high_can_fly.svg",
         "nonprofitStatus": "Nonprofit501c7",
