--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
       {
         "@context": "https://schema.org",
         "@type": "SportsClub",
-        "sport": "Parapente",
         "description": "Club de Parapente du Nord",
         "name": "High Can Fly Parapente",
         "alternateName": "Highcanfly",
         "naics": "711211",
         "image": "https://www.highcanfly.club/img/assets/img/logo_high_can_fly.svg",
         "logo": "https://www.highcanfly.club/img/assets/img/logo_high_can_fly.svg",
+        "telephone": "+33 3 66 72 14 65",
         "nonprofitStatus": "Nonprofit501c7",
         "url": "https://www.highcanfly.club",
         "address": {
@@ -40,9 +40,18 @@
         },
         "geo": {
           "@type": "GeoCoordinates",
-          "latitude": "50.399619",
-          "longitude": "3.096906"
+          "latitude": 50.399619,
+          "longitude": 3.096906"
         },
+        "areaServed": {
+          "@type": "GeoCircle",
+          "geoMidpoint": {
+              "@type": "GeoCoordinates",
+              "latitude": 50.43358,
+              "longitude": 2.585847
+          },
+          "geoRadius": 200000
+      },
         "sameAs" : [
                       "https://twitter.com/HighCanFlyClub",
                       "https://www.instagram.com/highcanfly_parapente/",
