--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         "geo": {
           "@type": "GeoCoordinates",
           "latitude": 50.399619,
-          "longitude": 3.096906"
+          "longitude": 3.096906
         },
         "areaServed": {
           "@type": "GeoCircle",
